--- a/WebContent/sw_css/sw-1.0.0.css
+++ b/WebContent/sw_css/sw-1.0.0.css
@@ -139,7 +139,7 @@ body {
 .topnav div.active,
 .bottomnav a.active,
 .bottomnav div.active {
-  background-color: #4caf50;
+  background-color: #45c1bf;
   color: white;
 }
 
