--- a/WebContent/sw_css/sw-1.0.0.css
+++ b/WebContent/sw_css/sw-1.0.0.css
@@ -89,6 +89,10 @@ body {
   top: 15px;
 }
 
+.h100 {
+  height: 100px;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
