--- a/WebContent/sw_css/sw-1.0.0.css
+++ b/WebContent/sw_css/sw-1.0.0.css
@@ -14,6 +14,13 @@ body {
   /* margin-top: 70px; */
 }
 
+.no_line_textarea {
+  border: none;
+  width: 100%;
+  background: none;
+  resize: none;
+}
+
 .sw-container-1200 {
   max-width: 1200px;
   margin: auto;
