--- a/WebContent/sw_css/sw-1.0.0.css
+++ b/WebContent/sw_css/sw-1.0.0.css
@@ -14,8 +14,8 @@ body {
 }
 
 @font-face {
-  font-family: 'baemin_font';
-  src: url('./BMHANNAPro.ttf');
+  font-family: "baemin_font";
+  src: url("./BMHANNAPro.ttf");
 }
 
 .sw-center {
