--- a/WebContent/sw_css/sw-1.0.0.css
+++ b/WebContent/sw_css/sw-1.0.0.css
@@ -3,6 +3,20 @@ body {
   padding: 0px;
 }
 
+#topnav{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	overflow: hidden;
+}
+
+.baemin_topnav {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	overflow: hidden;
+}
+
 @font-face {
   font-family: baemin_font;
   src: url("../source/BMHANNAPro.ttf");
